将主键属性[BIGINT(19)]变更为[VARCHAR(32)]